--- a/2_code/1_prepare/preprocess_gtsm.ipynb
+++ b/2_code/1_prepare/preprocess_gtsm.ipynb
@@ -176,6 +176,47 @@
     "        \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "deab2e4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hydromt\n",
+    "\n",
+    "events = {'idai': ('20190314', '20190316'), 'eloise':('20210122', '20210124')}\n",
+    "event ='eloise'\n",
+    "fn = f'../../1_data/2_forcing/GTSM/{event}_era5_spw_tides_his_beira_egm.nc'\n",
+    "ds = xr.open_dataset(fn).sel(time=slice(*events[event])).dropna('stations')\n",
+    "ds.vector.set_spatial_dims(x_dim='station_x_coordinate', y_dim='station_y_coordinate', index_dim='stations')\n",
+    "itime = ds['waterlevel'].argmax('time')\n",
+    "# ds.isel(time=itime).vector.to_gdf().drop(columns=['station_name', 'time']).to_file(fn.replace('.nc', '.geojson'), driver='GeoJSON')\n",
+    "ds['shww'] = ds['shww']*0.2\n",
+    "ds['waterlevel'] = ds['waterlevel'] - ds['mdt']\n",
+    "ds0 = ds.isel(time=itime).sel(stations=[17492, 17493, 18275, 18276])\n",
+    "(ds0['shww'] / (ds0['tide'] + ds0['surge'] + ds0['shww'])).mean()\n",
+    "ds0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92fe4646",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.sel(stations=[17492, 17493, 18275, 18276]).max('time')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce81b850",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
