--- a/2_code/4_analyze_plot/41_plot_models.ipynb
+++ b/2_code/4_analyze_plot/41_plot_models.ipynb
@@ -274,11 +274,11 @@
     "extent = np.array(gdf_region.buffer(1000).total_bounds)[[0, 2, 1, 3]]\n",
     "ax1.set_extent(extent, crs=utm)\n",
     "cs = da_dep.plot(ax=ax1, cmap=cmap, norm=norm, zorder=2, add_colorbar=True, cbar_kwargs=dict(shrink=0.5, anchor=(0,0.1)))\n",
-    "gdf_bnd.plot(ax=ax1, marker=\"^\", markersize=60, c=\"w\", edgecolor=\"k\", label='waterlevel bound.', zorder=4)\n",
+    "gdf_bnd.plot(ax=ax1, marker=\"^\", markersize=60, c=\"w\", edgecolor=\"k\", label='waterlevel boundary', zorder=4)\n",
     "for label, grow in gdf_bnd.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'H{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_src.plot(ax=ax1, marker=\">\", markersize=60, c=\"w\", edgecolor=\"k\", label='discharge bound.', zorder=4)\n",
+    "gdf_src.plot(ax=ax1, marker=\">\", markersize=60, c=\"w\", edgecolor=\"k\", label='discharge boundary', zorder=4)\n",
     "for label, grow in gdf_src.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'Q{label}', xy=(x, y), **ann_kwargs)\n",
@@ -286,7 +286,7 @@
     "for label, grow in gdf_points.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
-    "ax1.text(0.8, 0.15, 'Indian Ocean', rotation=30, transform=ax1.transAxes)\n",
+    "ax1.text(0.7, 0.08, 'Mozambique Channel\\n(Indian Ocean)', rotation=35, transform=ax1.transAxes)\n",
     "gdf_riv.boundary.plot(ax=ax1, ls='--', lw=0.5, color='k', alpha=0.5, label='river outline')\n",
     "    \n",
     "# towns\n",
@@ -304,9 +304,7 @@
     "ax1.yaxis.set_visible(True)\n",
     "ax1.xaxis.set_visible(True)\n",
     "ax1.set_ylabel(f\"\")\n",
-    "ax1.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")\n",
-    "\n",
-    "ax1.legend(\n",
+    "ax1.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")ax1.legend(\n",
     "    bbox_to_anchor=(1, 1),\n",
     "    title=\"Legend\",\n",
     "    loc=\"upper right\",\n",
@@ -319,6 +317,14 @@
     "fig.subplots_adjust(wspace=0.04)\n",
     "plt.savefig(join('../../4_results', f'nested_spatial.png'), dpi=225, bbox_inches=\"tight\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9cdeb8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
