--- a/2_code/4_analyze_plot/42_plot_forcing.ipynb
+++ b/2_code/4_analyze_plot/42_plot_forcing.ipynb
@@ -52,6 +52,8 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "import pandas as pd\n",
+    "from string import ascii_uppercase as abcd\n",
+    "\n",
     "\n",
     "kwargs=dict()\n",
     "colors = ['#377eb8', '#ff7f00', '#4daf4a', '#f781bf', '#a65628', '#984ea3', '#999999', '#e41a1c', '#dede00']\n",
@@ -135,6 +137,7 @@
     "            axes[i,j].set_xticklabels('')\n",
     "        if i == 0:\n",
     "            axes[i,j].set_title(event.capitalize())\n",
+    "        axes[i,j].text(0.01, 0.9, abcd[i*2+j].upper(), fontsize=14, fontweight='bold', transform=axes[i,j].transAxes)\n",
     "\n",
     "fig.subplots_adjust(wspace=0.05) \n",
     "plt.savefig(join(fdir, f'forcing.png'), dpi=225, bbox_inches=\"tight\")"
@@ -145,7 +148,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "xr.open_dataset()"
+   ]
   }
  ],
  "metadata": {
