--- a/2_code/4_analyze_plot/43_floodextent_analysis.ipynb
+++ b/2_code/4_analyze_plot/43_floodextent_analysis.ipynb
@@ -228,8 +228,8 @@
     "    'cmf': 'CaMa-Flood',\n",
     "}\n",
     "\n",
-    "for col, (event, date) in enumerate(events.items()):\n",
-    "    for row, mod in enumerate(['cmf', 'sfx']):\n",
+    "for row, (event, date) in enumerate(events.items()):\n",
+    "    for col, mod in enumerate(['cmf', 'sfx']):\n",
     "        i = int(row*2 + col)\n",
     "        ax = axs[i]\n",
     "        da_cm = res[mod][date].load()\n",
@@ -292,8 +292,12 @@
     "    sharex = True, sharey=True\n",
     ")\n",
     "axs = axs.flatten()\n",
-    "for col, (event, date) in enumerate(events.items()):\n",
-    "    for row, mod in enumerate(['cmf', 'sfx']):\n",
+    "\n",
+    "cmap = plt.cm.viridis.copy()\n",
+    "cmap.set_under('white')\n",
+    "\n",
+    "for row, (event, date) in enumerate(events.items()):\n",
+    "    for col, mod in enumerate(['cmf', 'sfx']):\n",
     "        i = int(row*2 + col)\n",
     "        ax = axs[i]\n",
     "        da_sim = hmax_sim[mod][date].load()\n",
@@ -304,7 +308,7 @@
     "        da_msk.raster.set_crs(gdf_riv.crs)\n",
     "\n",
     "        da_msk.where(da_msk).plot(ax=ax, cmap='gray', add_colorbar=False, alpha=0.5)\n",
-    "        cs = da_sim.where(da_sim>hmin).plot(ax=ax, cmap='viridis', vmin=hmin, vmax=4, add_colorbar=False)\n",
+    "        cs = da_sim.where(da_sim>hmin).plot(ax=ax, cmap=cmap, vmin=hmin, vmax=3.5, add_colorbar=False)\n",
     "        # context\n",
     "        # gdf_riv.boundary.plot(ax=ax, ls='--', lw=0.5, color='k', alpha=0.5)\n",
     "        # gdf_towns.plot(ax=ax, marker='.', markersize=20, color=\"k\", label='towns / cities', zorder=4)\n",
@@ -341,7 +345,7 @@
     "\n",
     "# # Draw the colorbar\n",
     "ticks = [hmin] + np.arange(0.5, 4.1, 0.5).tolist()\n",
-    "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks)\n",
+    "cbar=fig.colorbar(cs, cax=cbar_ax, orientation='vertical', ticks=ticks, extend='both')\n",
     "cbar_ax.set_ylabel('maximum flood depth [m]')\n",
     "\n",
     "plt.savefig(join(fdir, f'flddph_hmin{int(hmin*100)}_100m.png'), dpi=500, bbox_inches=\"tight\")"
