--- a/2_code/4_analyze_plot/45_compound_analysis.ipynb
+++ b/2_code/4_analyze_plot/45_compound_analysis.ipynb
@@ -82,6 +82,27 @@
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
+    "levels = np.arange(1,8)\n",
+    "colors = np.array([\n",
+    "    [252,141,98],\n",
+    "    [217,95,2],\n",
+    "    [141,160,203],\n",
+    "    [117,112,179],\n",
+    "    [102,194,165],\n",
+    "    [27,158,119],\n",
+    "])/255\n",
+    "colors = np.hstack([colors, np.ones((6,1))])\n",
+    "colors[[0,2,4],-1] = 0.7\n",
+    "cmap, norm = mpl.colors.from_levels_and_colors(levels, colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "from matplotlib import colors, patheffects\n",
@@ -93,10 +114,10 @@
     "utm = ccrs.UTM(int(utm_zone[:2]), \"S\" in utm_zone)\n",
     "extent = np.array(da.raster.box.buffer(100).total_bounds)[[0, 2, 1, 3]]\n",
     "\n",
-    "cmap = mpl.cm.get_cmap('tab20c')\n",
-    "levels = np.arange(1,8)\n",
-    "colors = np.array(cmap.colors)[[2,0,14,12,10,8]]\n",
-    "cmap, norm = mpl.colors.from_levels_and_colors(levels, colors)\n",
+    "# cmap = mpl.cm.get_cmap('tab20c')\n",
+    "# levels = np.arange(1,8)\n",
+    "# colors = np.array(cmap.colors)[[2,0,14,12,10,8]]\n",
+    "# cmap, norm = mpl.colors.from_levels_and_colors(levels, colors)\n",
     "\n",
     "ann_kwargs = dict(\n",
     "    xytext=(4, 0),\n",
