--- a/2_code/2_experiment/22_setup_cmf_models.ipynb
+++ b/2_code/2_experiment/22_setup_cmf_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# name = '3sec.catmxy'\n",
+    "# shape1 = (2, 5400, 4200)\n",
+    "# dtype='i2' \n",
+    "# transform = from_bounds(*bbox, shape1[-1], shape1[-2])\n",
+    "# da = hydromt.raster.RasterDataArray.from_numpy(\n",
+    "#     data = np.fromfile(join(mdir, f'{name}.bin'), dtype).reshape((shape1)),\n",
+    "#     transform=transform, \n",
+    "#     nodata=nodata,\n",
+    "# )\n",
+    "# da.raster.to_raster(join(mdir, f'{name}.tif'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
