--- a/2_code/4_analyze_plot/44_waterlevel_analysis.ipynb
+++ b/2_code/4_analyze_plot/44_waterlevel_analysis.ipynb
@@ -14,7 +14,8 @@
     "import hydromt\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from string import ascii_uppercase as abcd\n"
    ]
   },
   {
@@ -134,6 +135,8 @@
     "        ax.set_ylim([ymin, ymax*1.1])\n",
     "        ax.set_ylabel('waterlevel [m+EGM96]')\n",
     "    ax.set_title(event.capitalize())\n",
+    "    ax.text(0.01, 0.9, abcd[icol].upper(), fontsize=14, fontweight='bold', transform=ax.transAxes)\n",
+    "\n",
     "\n",
     "    ax1 = axes[1,icol]\n",
     "\n",
@@ -158,6 +161,7 @@
     "    ax1.set_xlim([sfx[event].time.values[0], sfx[event].time.values[-1]])\n",
     "    ax1.xaxis.set_major_locator(locator)\n",
     "    ax1.xaxis.set_major_formatter(formatter)\n",
+    "    ax1.text(0.01, 0.9, abcd[icol+1].upper(), fontsize=14, fontweight='bold', transform=ax1.transAxes)\n",
     "\n",
     "\n",
     "fig.subplots_adjust(wspace=0.05, hspace=0.05) \n",
