add data; test reproducibility

--- a/2_code/1_prepare/preprocess_gtsm.ipynb
+++ b/2_code/1_prepare/preprocess_gtsm.ipynb
@@ -117,8 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
+    "# preprocess total sea level data\n",
     "mdt0 = da_mdt.raster.sample(gdf_gtsm).rename({'index': 'stations'}).reset_coords(drop=True)\n",
     "mdt0.name = 'mdt'\n",
     "run = ''\n",
@@ -184,6 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# explore total sea level components\n",
     "import hydromt\n",
     "\n",
     "events = {'idai': ('20190314', '20190316'), 'eloise':('20210122', '20210124')}\n",
