--- a/2_code/3_postprocess/31_process_eo_floodextent.ipynb
+++ b/2_code/3_postprocess/31_process_eo_floodextent.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# NOTE: requires the *.zip archives in 1_data/3_eo_rapid/ to be unzipped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from hydromt_sfincs import SfincsModel\n",
     "import hydromt\n",
     "from os.path import join\n",
@@ -22,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# requires the model to be setup in step 2_experiment/21_setup_sfincs_models.ipynb\n",
     "root = r'../../3_models/SFINCS/00_base_100m'\n",
     "mod0 = SfincsModel(root, mode='r')"
    ]
@@ -95,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
