--- a/2_code/4_analyze_plot/41_plot_models.ipynb
+++ b/2_code/4_analyze_plot/41_plot_models.ipynb
@@ -11,26 +11,13 @@
     "import numpy as np\n",
     "import hydromt\n",
     "import geopandas as gpd\n",
-    "from os.path import join, basename, isfile\n",
+    "from os.path import join\n",
     "from hydromt.models import SfincsModel\n",
     "import pandas as pd\n",
-    "import glob\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import colors, patheffects\n",
-    "import cartopy.io.img_tiles as cimgt\n",
-    "import cartopy.crs as ccrs\n",
-    "from string import ascii_lowercase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "afcc0818",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat = hydromt.DataCatalog(deltares_data=True)"
+    "import cartopy.crs as ccrs"
    ]
   },
   {
@@ -141,37 +128,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34dd9d86",
+   "id": "36c371a5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# basin shapes\n",
-    "da_bas = cat.get_rasterdataset('merit_hydro', variables=['basins'], bbox=ds_cmf.raster.bounds, buffer=10)\n",
-    "bas_lst = np.unique(da_bas)[4:6]\n",
-    "print(bas_lst)\n",
-    "gdf_cmf_bas = da_bas.astype(np.int32).raster.vectorize()\n",
-    "gdf_cmf_bas['basin'] = gdf_cmf_bas['value'].astype(int)\n",
-    "gdf_cmf_bas = gdf_cmf_bas[np.isin(gdf_cmf_bas['basin'], bas_lst)].set_index('basin')\n",
-    "gdf_cmf_bas = gdf_cmf_bas.to_crs(ds_sfx.raster.crs)"
+    "da_bas.values"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67ccbdf0",
+   "id": "34dd9d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hillshade background\n",
-    "res = 500\n",
-    "da = cat.get_rasterdataset('merit_hydro', variables=['elevtn'], bbox=ds_cmf.raster.bounds, buffer=10)\n",
-    "da = da.raster.reproject(dst_crs=ds_sfx.raster.crs, dst_res=res, method='cubic')\n",
+    "deltares_data=False\n",
+    "\n",
+    "if deltares_data:\n",
+    "    # basin shapes\n",
+    "    cat = hydromt.DataCatalog(deltares_data=deltares_data)\n",
+    "    da_bas = cat.get_rasterdataset('merit_hydro', variables=['basins'], bbox=ds_cmf.raster.bounds, buffer=10)\n",
+    "    bas_lst = np.unique(da_bas)[4:6]\n",
+    "    print(bas_lst)\n",
+    "\n",
+    "    # hillshade background\n",
+    "    da = cat.get_rasterdataset('merit_hydro', variables=['elevtn'], bbox=ds_cmf.raster.bounds, buffer=10)\n",
+    "    da = da.raster.reproject(dst_crs=ds_sfx.raster.crs, dst_res=res, method='cubic')\n",
+    "    res = 500\n",
+    "\n",
+    "\n",
+    "else:\n",
+    "    da_bas = ds_cmf['basin']\n",
+    "    da= ds_cmf['elevtn']\n",
+    "    res = 5000\n",
+    "    bas_lst = [1,2]#,23]\n",
+    "\n",
+    "\n",
     "ls = colors.LightSource(azdeg=210, altdeg=45)\n",
     "hs = ls.hillshade(np.ma.masked_equal(da.values, -9999), vert_exag=10, dx=res, dy=res)\n",
-    "\n",
     "da_hs = xr.DataArray(\n",
     "    dims=da.raster.dims, data=hs, coords=da.raster.coords\n",
-    ").where(~hs.mask)"
+    ").where(~hs.mask)\n",
+    "\n",
+    "gdf_cmf_bas = da_bas.astype(np.int32).raster.vectorize()\n",
+    "gdf_cmf_bas['basin'] = gdf_cmf_bas['value'].astype(int)\n",
+    "gdf_cmf_bas = gdf_cmf_bas[np.isin(gdf_cmf_bas['basin'], bas_lst)].set_index('basin')\n",
+    "gdf_cmf_bas = gdf_cmf_bas.to_crs(ds_sfx.raster.crs)"
    ]
   },
   {
@@ -304,7 +306,8 @@
     "ax1.yaxis.set_visible(True)\n",
     "ax1.xaxis.set_visible(True)\n",
     "ax1.set_ylabel(f\"\")\n",
-    "ax1.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")ax1.legend(\n",
+    "ax1.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")\n",
+    "ax1.legend(\n",
     "    bbox_to_anchor=(1, 1),\n",
     "    title=\"Legend\",\n",
     "    loc=\"upper right\",\n",
@@ -321,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cdeb8d",
+   "id": "da054fdd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -343,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
