--- a/2_code/4_analyze_plot/42_plot_forcing.ipynb
+++ b/2_code/4_analyze_plot/42_plot_forcing.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "from hydromt_sfincs import SfincsModel\n",
     "from os.path import join\n",
-    "import xarray as xr\n",
-    "import numpy as np"
+    "import xarray as xr"
    ]
   },
   {
@@ -142,15 +141,6 @@
     "fig.subplots_adjust(wspace=0.05) \n",
     "plt.savefig(join(fdir, f'forcing.png'), dpi=225, bbox_inches=\"tight\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xr.open_dataset()"
-   ]
   }
  ],
  "metadata": {
@@ -172,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
