--- a/2_code/4_analyze_plot/43_floodextent_analysis.ipynb
+++ b/2_code/4_analyze_plot/43_floodextent_analysis.ipynb
@@ -9,7 +9,7 @@
     "import hydromt\n",
     "import xarray as xr\n",
     "import numpy as np\n",
-    "from os.path import join, basename\n",
+    "from os.path import join\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -44,7 +44,7 @@
    "source": [
     "# read permanent water mask data\n",
     "msk, roots = {}, {}\n",
-    "for i, postfix in [(0, '_100m'), (10, '_50m')]:\n",
+    "for i, postfix in [(0, '_100m')]: #, (10, '_50m')]:\n",
     "    root = join(mdir, f'{i:02d}_base{postfix}')\n",
     "    print(root)\n",
     "    da_msk_eo = hydromt.open_mfraster(join(root, 'gis', f'dry_*.tif'), concat=True)['dry'].max('dim0')==1\n",
@@ -101,7 +101,7 @@
     "\n",
     "for event, date in events.items():\n",
     "    dfs = []\n",
-    "    for postfix in ['_100m', '_50m']:\n",
+    "    for postfix in ['_100m']: #, '_50m']:\n",
     "        da_obs = hydromt.open_raster(join(roots[postfix], 'gis', f'flooding_{date}.tif'))\n",
     "        da_sim = xr.open_dataarray(join(mdir, f'flddph_{event}{postfix}.nc')).raster.flipud()\n",
     "        da_skill, da_cm = skill(da_sim, da_obs, msk[postfix], hmin=hmin)\n",
@@ -350,86 +350,6 @@
     "\n",
     "plt.savefig(join(fdir, f'flddph_hmin{int(hmin*100)}_100m.png'), dpi=500, bbox_inches=\"tight\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## sensitivity analysis\n",
-    "\n",
-    "## barplots\n",
-    "## TODO different rows per event (to scale x axis)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(2,3, figsize=(15,10), sharey=True)\n",
-    "# colors=['darkgreen', 'darkblue', 'darkgreen', 'tab:green']\n",
-    "kwargs = dict(edgecolor='white', linewidth=1.5, width=0.8, legend=False, zorder=4)\n",
-    "xlims = [\n",
-    "    [[0.60, 0.76], [0.65, 0.91], [0.00,0.21]],\n",
-    "    [[0.25, 0.51], [0.35, 0.85], [0.25,0.51]],\n",
-    "]\n",
-    "\n",
-    "\n",
-    "for row, event in enumerate(events):\n",
-    "    csi = pd.concat([\n",
-    "        sfx_skill[event]['C'].rename(f'SFINCS'), \n",
-    "        cmf_skill[event]['C'].rename(f'CaMa-Flood'),\n",
-    "    ], axis=1).sort_index()\n",
-    "    fr = pd.concat([\n",
-    "        sfx_skill[event]['F'].rename(f'SFINCS'), \n",
-    "        cmf_skill[event]['F'].rename(f'CaMa-Flood'),\n",
-    "    ], axis=1).sort_index()\n",
-    "    hr = pd.concat([\n",
-    "        sfx_skill[event]['H'].rename(f'SFINCS'), \n",
-    "        cmf_skill[event]['H'].rename(f'CaMa-Flood'),\n",
-    "    ], axis=1).sort_index()\n",
-    "\n",
-    "    csi.plot.barh(ax=axs[row, 0], **kwargs)\n",
-    "    hr.plot.barh(ax=axs[row, 1], **kwargs)\n",
-    "    if row == 0:\n",
-    "        fr.plot.barh(ax=axs[row,2], **kwargs).legend(\n",
-    "            bbox_to_anchor=(1.1, 1.1),\n",
-    "            loc=\"upper right\",\n",
-    "            ncol=1,\n",
-    "            fontsize=12\n",
-    "\n",
-    "        )\n",
-    "    else:\n",
-    "        fr.plot.barh(ax=axs[row,2], **kwargs)\n",
-    "        axs[row,2].set_xlabel('false alarm rate [-]', fontsize=12)\n",
-    "        axs[row,1].set_xlabel('hit rate [-]', fontsize=12)\n",
-    "        axs[row,0].set_xlabel('critical succes index [-]', fontsize=12)\n",
-    "\n",
-    "    for i in range(3):\n",
-    "        axs[row,i].grid(axis='x')\n",
-    "        axs[row,i].tick_params(labelsize=10)\n",
-    "        xmin, xmax = xlims[row][i]\n",
-    "        axs[row,i].set_xlim([xmin, xmax])\n",
-    "        axs[row,i].set_xticks(np.arange(xmin, xmax, 0.05))\n",
-    "\n",
-    "    axs[row,1].set_title(event.capitalize(), fontsize=14)\n",
-    "    axs[row,0].set_ylabel('')\n",
-    "    \n",
-    "\n",
-    "# fig.tight_layout()\n",
-    "fig.subplots_adjust(wspace=0.05) \n",
-    "plt.savefig(join(fdir, f'sensitivity.png'), dpi=300, bbox_inches=\"tight\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -451,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
