--- a/2_code/4_analyze_plot/44_waterlevel_analysis.ipynb
+++ b/2_code/4_analyze_plot/44_waterlevel_analysis.ipynb
@@ -7,10 +7,9 @@
    "outputs": [],
    "source": [
     "from hydromt_sfincs import SfincsModel\n",
-    "from os.path import join, isfile, basename, isdir, dirname\n",
+    "from os.path import join\n",
     "import xarray as xr\n",
     "import numpy as np\n",
-    "import glob\n",
     "import hydromt\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
@@ -27,7 +26,7 @@
     "model_root = r'../../3_models/SFINCS'\n",
     "fdir = r'../../4_results'\n",
     "base_root = join(model_root, \"01_rivpowlaw\")\n",
-    "events = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}\n"
+    "events = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}"
    ]
   },
   {
@@ -71,17 +70,17 @@
     "ncol=70\n",
     "cols = xr.IndexVariable('index', idxs%ncol)\n",
     "rows = xr.IndexVariable('index', idxs//ncol)\n",
-    "# name = 'flddph'#\n",
-    "name = 'rivdph'\n",
+    "name = 'flddph'#\n",
+    "# name = 'rivdph'\n",
     "\n",
     "cmf_out = join(root, '01_powlaw')\n",
-    "da_cmf_z0 = hydromt.open_raster(join(root, 'elevtn.tif'))\n",
+    "da_cmf_z0 = hydromt.open_raster(join(root,'gis', 'elevtn.tif'))\n",
     "da_cmf_h = xr.open_mfdataset(join(cmf_out, f'o_{name}20*.nc'))[name].rename('zs')\n",
     "if name == 'flddph':\n",
     "    da_cmf_zs = da_cmf_h + da_cmf_z0.raster.reproject_like(da_cmf_h)\n",
-    "else:\n",
-    "    da_cmf_zb = da_cmf_z0 - hydromt.open_raster(join(root, 'rivdph_hc0.27_hp0.3.tif'))\n",
-    "    da_cmf_zs = da_cmf_h + da_cmf_zb.raster.reproject_like(da_cmf_h)\n",
+    "# else:\n",
+    "#     da_cmf_zb = da_cmf_z0 - hydromt.open_raster(join(root, 'gis', 'rivdph_hc0.27_hp0.3.tif'))\n",
+    "#     da_cmf_zs = da_cmf_h + da_cmf_zb.raster.reproject_like(da_cmf_h)\n",
     "\n",
     "cmf =  {}\n",
     "for j, (event, dates) in enumerate(events.items()):\n",
@@ -220,13 +219,6 @@
     "\n",
     "plt.savefig(join(fdir, 'obs_waterlevels.png'), dpi=300,)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -248,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
