--- a/2_code/4_analyze_plot/45_compound_analysis.ipynb
+++ b/2_code/4_analyze_plot/45_compound_analysis.ipynb
@@ -10,8 +10,7 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "from os.path import join\n",
-    "import geopandas as gpd\n",
-    "import pandas as pd"
+    "import geopandas as gpd"
    ]
   },
   {
@@ -39,7 +38,7 @@
    "source": [
     "hmin=0.15\n",
     "dh = 0.05\n",
-    "base ='02_rivpowlaw_hc0.405'\n",
+    "# base ='01_rivpowlaw'\n",
     "\n",
     "da_sim, da_diff, da_cmpnd = {}, {}, {}\n",
     "for event in events:\n",
@@ -232,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
