--- a/2_code/3_postprocess/31_process_eo_floodextent.ipynb
+++ b/2_code/3_postprocess/31_process_eo_floodextent.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hydromt_sfincs import SfincsModel\n",
     "import hydromt\n",
-    "from os.path import join\n",
+    "from os.path import join, basename\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "import glob\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "nodata value missing for ../../1_data/3_eo_sentinel1\\sofala_floodmap_RefinedLee_20190319_10m.tif\n",
+      "nodata value missing for ../../1_data/3_eo_sentinel1\\sofala_floodmap_RefinedLee_20190320_10m.tif\n",
+      "nodata value missing for ../../1_data/3_eo_sentinel1\\sofala_floodmap_RefinedLee_20210125_10m.tif\n",
+      "nodata value missing for ../../1_data/3_eo_sentinel1\\sofala_floodmap_RefinedLee_20210126_10m.tif\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read and resample processed sentinel 1 images to model domain\n",
+    "ddir = r'../../1_data/3_eo_sentinel1'\n",
+    "events = {\n",
+    "    'idai': ['20190319', '20190320'], \n",
+    "    'eloise':['20210125','20210126']\n",
+    "}\n",
+    "fns = glob.glob(join(ddir, f'sofala*.tif'))\n",
+    "for event, dates in events.items():\n",
+    "    da_obs_lst = []\n",
+    "    for date in dates:\n",
+    "        name = f'sofala_floodmap_RefinedLee_{date}_10m.tif'\n",
+    "        fn = join(ddir, name)\n",
+    "        da_obs0 = hydromt.open_raster(fn).load().astype(np.int8)\n",
+    "        da_obs0.raster.set_nodata(-1)\n",
+    "        da_obs0 = da_obs0.raster.reproject_like(mod0.staticmaps, method='max')\n",
+    "        # da_obs0 = da_obs0.where(da_obs0==1,0)\n",
+    "        # da_obs0.raster.set_nodata(-1)\n",
+    "        da_obs_lst.append(da_obs0)\n",
+    "        da_obs0.raster.to_raster(join(root, 'gis', f'sofala_floodmap_{date}.tif'), compress='deflate')\n",
+    "    da_obs_max = xr.concat(da_obs_lst, dim='time').max('time')\n",
+    "    da_obs0.raster.to_raster(join(root, 'gis', f'sofala_floodmap_{event}_max.tif'), compress='deflate')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -87,11 +129,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc0994946103a4a9202e7a48444db4b9747772261f089f42618eeb067054486d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('hydromt-dev': conda)",
+   "display_name": "Python 3.9.0 ('compound_hazard2')",
    "language": "python",
    "name": "python3"
   },
@@ -107,7 +146,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff157b875d130708b62c1a0894fbc6ff6f8e6586fc48c3b625ee942e47421840"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
