--- a/2_code/4_analyze_plot/41_plot_models.ipynb
+++ b/2_code/4_analyze_plot/41_plot_models.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mod = SfincsModel(r'../../3_models/SFINCS/01_rivpowlaw/idai', mode='r')\n",
+    "mod = SfincsModel(r'../../3_models/SFINCS2/01_rivpowlaw/idai', mode='r')\n",
     "ds_sfx = mod.staticmaps\n",
     "gdf_points = mod.staticgeoms['obs']\n",
     "\n",
@@ -35,6 +35,45 @@
     "riv_mask = hydromt.open_raster(join(mod.root, '../gis', 'rivmsk.tif'))\n",
     "riv_mask.raster.set_nodata(0)\n",
     "gdf_riv = riv_mask.where(~dep_mask, 0).raster.vectorize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6680dd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = r'../../3_models/SFINCS2/00_base_100m'\n",
+    "mod0 = SfincsModel(root, mode='r')\n",
+    "flwdir =  hydromt.flw.flwdir_from_da(mod0.staticmaps['flwdir'])\n",
+    "xs, ys = flwdir.xy(flwdir.idxs_pit)\n",
+    "selection = ~np.logical_and(xs>=680000, ys>=7820000)\n",
+    "mod0.set_staticmaps(flwdir.basins(xy=(xs[selection], ys[selection])).astype('int16'), 'basins')\n",
+    "mod0.staticmaps['basins'].raster.set_nodata(0)\n",
+    "da_msk_bas = np.logical_and(mod0.staticmaps['basins'] == 0, mod0.staticmaps['dep']>0)\n",
+    "da_msk_bas = da_msk_bas.astype('int16')\n",
+    "da_msk_bas.raster.set_nodata(0)\n",
+    "gdf_bas = da_msk_bas.raster.vectorize()\n",
+    "# gdf_bas.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00d9866d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from hydromt_sfincs.workflows import river_boundary_points\n",
+    "gdf_src0, gdf_riv0 = river_boundary_points(\n",
+    "    da_flwdir=mod0.staticmaps['flwdir'],\n",
+    "    da_uparea=mod0.staticmaps['uparea'].where(da_msk_bas==0, 0),\n",
+    "    river_upa=10,\n",
+    "    river_len=10000,\n",
+    ")\n",
+    "\n",
+    "gdf_src0.sort_values(by='uparea', ascending=False).iloc[mod0.forcing['dis'].index.size:,]#.sum()"
    ]
   },
   {
@@ -128,21 +167,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36c371a5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "da_bas.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "34dd9d86",
    "metadata": {},
    "outputs": [],
    "source": [
-    "deltares_data=False\n",
+    "deltares_data=True\n",
     "\n",
     "if deltares_data:\n",
     "    # basin shapes\n",
@@ -153,8 +182,8 @@
     "\n",
     "    # hillshade background\n",
     "    da = cat.get_rasterdataset('merit_hydro', variables=['elevtn'], bbox=ds_cmf.raster.bounds, buffer=10)\n",
-    "    da = da.raster.reproject(dst_crs=ds_sfx.raster.crs, dst_res=res, method='cubic')\n",
     "    res = 500\n",
+    "    da = da.raster.reproject(dst_crs=ds_sfx.raster.crs, dst_res=res, method='cubic')\n",
     "\n",
     "\n",
     "else:\n",
@@ -284,13 +313,17 @@
     "for label, grow in gdf_src.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'Q{label}', xy=(x, y), **ann_kwargs)\n",
-    "gdf_points.plot(ax=ax1, marker='d', markersize=60, c=\"w\", edgecolor=\"k\", label='model obs. point', zorder=4)\n",
+    "gdf_points.plot(ax=ax1, marker='d', markersize=60, c=\"w\", edgecolor=\"k\", label='model point', zorder=4)\n",
     "for label, grow in gdf_points.iterrows():\n",
     "    x, y = grow.geometry.x, grow.geometry.y\n",
     "    ax1.annotate(f'{label}', xy=(x, y), **ann_kwargs)\n",
     "ax1.text(0.7, 0.08, 'Mozambique Channel\\n(Indian Ocean)', rotation=35, transform=ax1.transAxes)\n",
     "gdf_riv.boundary.plot(ax=ax1, ls='--', lw=0.5, color='k', alpha=0.5, label='river outline')\n",
-    "    \n",
+    "\n",
+    "kwargs = dict(facecolor='white', alpha=0.6, lw=0, hatch='x', label='excluded area')\n",
+    "gdf_bas.plot(ax=ax1, zorder=3, **kwargs)\n",
+    "bas_handle = mpatches.Patch(**kwargs)\n",
+    "\n",
     "# towns\n",
     "gdf.plot(ax=ax1, marker='.', markersize=40, color=\"k\", label='towns / cities', zorder=4)\n",
     "for label, grow in gdf.iterrows():\n",
@@ -307,18 +340,21 @@
     "ax1.xaxis.set_visible(True)\n",
     "ax1.set_ylabel(f\"\")\n",
     "ax1.set_xlabel(f\"x coordinate UTM zone {utm_zone} [m]\")\n",
+    "handles, _ = ax1.get_legend_handles_labels()\n",
     "ax1.legend(\n",
-    "    bbox_to_anchor=(1, 1),\n",
+    "    handles=[*handles, bas_handle],\n",
+    "    bbox_to_anchor=(1.0, 1),\n",
     "    title=\"Legend\",\n",
     "    loc=\"upper right\",\n",
     "    frameon=True,\n",
+    "    framealpha=0.9,\n",
     ")\n",
     "ax1.add_artist(ScaleBar(1, location='lower right', box_alpha=0.0))\n",
     "ax1.set_title('B) SFINCS model - elevation')\n",
     "\n",
     "#\n",
     "fig.subplots_adjust(wspace=0.04)\n",
-    "plt.savefig(join('../../4_results', f'nested_spatial.png'), dpi=225, bbox_inches=\"tight\")"
+    "plt.savefig(join('../../4_results/rebuttal', f'nested_spatial.png'), dpi=225, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -332,7 +368,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.0 ('compound_hazard2')",
    "language": "python",
    "name": "python3"
   },
@@ -347,6 +383,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ff157b875d130708b62c1a0894fbc6ff6f8e6586fc48c3b625ee942e47421840"
+   }
   }
  },
  "nbformat": 4,
