--- a/2_code/4_analyze_plot/44_waterlevel_analysis.ipynb
+++ b/2_code/4_analyze_plot/44_waterlevel_analysis.ipynb
@@ -14,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
     "import pandas as pd\n",
-    "from string import ascii_uppercase as abcd\n"
+    "from string import ascii_uppercase as abcd"
    ]
   },
   {
@@ -23,8 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_root = r'../../3_models/SFINCS'\n",
-    "fdir = r'../../4_results'\n",
+    "model_root = r'../../3_models/SFINCS2'\n",
+    "fdir = r'../../4_results/rebuttal/'\n",
     "base_root = join(model_root, \"01_rivpowlaw\")\n",
     "events = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}"
    ]
@@ -219,14 +219,18 @@
     "\n",
     "plt.savefig(join(fdir, 'obs_waterlevels.png'), dpi=300,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc0994946103a4a9202e7a48444db4b9747772261f089f42618eeb067054486d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('hydromt-dev')",
+   "display_name": "Python 3.9.0 ('compound_hazard2')",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +246,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff157b875d130708b62c1a0894fbc6ff6f8e6586fc48c3b625ee942e47421840"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
