--- a/2_code/2_experiment/22_setup_sfincs_models.ipynb
+++ b/2_code/2_experiment/22_setup_sfincs_models.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# model and data paths\n",
-    "model_root = r'../../3_models/SFINCS'\n",
+    "model_root = r'../../3_models/SFINCS2'\n",
     "data_libs = [\n",
     "    r'../../1_data/1_static/static_data.yml',\n",
     "    r'../../1_data/2_forcing/forcing_data.yml',    \n",
@@ -90,7 +90,7 @@
     "    if kwargs1:\n",
     "        postfix1 = '_'.join([f'{k[:3]}{v}' for k,v in kwargs1.items()])\n",
     "        root = f'{root}_{postfix1}'\n",
-    "    if isdir(root):\n",
+    "    if isfile(join(root, 'sfincs.inp')):\n",
     "        continue\n",
     "    mod1 = SfincsModel(base_root, mode='r', data_libs=data_libs, logger=logger)\n",
     "    # update bathymetry with specific settings\n",
@@ -115,13 +115,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write forcing\n",
-    "runs = [r for r in glob.glob(f'../../3_models/SFINCS/*') if not isfile(r)]\n",
+    "# write forcing for idai / eloise\n",
+    "runs = [r for r in glob.glob(f'{model_root}/*_rivpowlaw_*') if not isfile(r)]\n",
     "for root0 in runs:\n",
     "    # update forcing in subfolders\n",
     "    for event in ['idai', 'eloise']:\n",
     "        root = join(root0, event)\n",
-    "        if isdir(root):\n",
+    "        if isfile(join(root, 'sfincs.inp')):\n",
     "            continue\n",
     "        mod1 = SfincsModel(root0, mode='r', data_libs=data_libs, logger=logger)\n",
     "        opt = configread(f'update_sfincs_{event}.ini', abs_path=True)\n",
@@ -140,15 +140,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write forcing\n",
-    "runs = [r for r in glob.glob(f'../../3_models/SFINCS/*') if not isfile(r)]\n",
+    "# write forcing for sensitivity analysis\n",
+    "runs = [r for r in glob.glob(f'{model_root}/*') if not isfile(r)]\n",
     "base_root = join(model_root, \"01_rivpowlaw\")\n",
     "\n",
     "# update forcing in subfolders\n",
     "for event in ['idai', 'eloise']:\n",
     "    for run in ['glofas', 'h_x80', 'h_x120', 'qp_x80', 'qp_x120']:\n",
     "        root = join(base_root, f'{event}_{run}')\n",
-    "        if isdir(root):\n",
+    "        if isfile(join(root, 'sfincs.inp')):\n",
     "            continue\n",
     "        mod1 = SfincsModel(base_root, mode='r', data_libs=data_libs, logger=logger)\n",
     "        opt = configread(f'update_sfincs_{event}.ini', abs_path=True)\n",
@@ -186,6 +186,7 @@
     "## prepare compound runs\n",
     "\n",
     "base_root = join(model_root, \"01_rivpowlaw\")\n",
+    "base_root = join(model_root, \"02_rivpowlaw_hc0.405\")\n",
     "for event in ['idai', 'eloise']:\n",
     "    mod = SfincsModel(join(base_root, event), mode='r', data_libs=data_libs)\n",
     "    config = mod.config.copy()\n",
@@ -200,14 +201,14 @@
     "    assert np.all(htide.vector.xcoords.round(0) == htot.vector.xcoords.round(0))\n",
     "    assert np.all(htide.vector.ycoords.round(0) == htot.vector.ycoords.round(0))\n",
     "\n",
-    "    # get discharge climatology\n",
     "    da_dis = mod.forcing['dis'].copy()\n",
-    "    # mod.setup_q_forcing_from_grid(\n",
-    "    #     discharge_fn = 'glofas_era5',\n",
-    "    #     uparea_fn = 'glofas_uparea',   \n",
-    "    # )\n",
-    "    # da_dis_glofas = mod.forcing['dis'].copy()\n",
+    "    # get discharge climatology\n",
     "    # NOTE: requires long series which is not added to the repos; use hardcoded values here\n",
+    "    # mod.setup_config(**{\n",
+    "    #     'tref': '19900101 000000',\n",
+    "    #     'tstart': '19900101 000000',\n",
+    "    #     'tstop': '20201231 000000',\n",
+    "    # })\n",
     "    # mod.setup_q_forcing_from_grid(\n",
     "    #     discharge_fn = 'cmf_outflw_06min',   # TODO change to 3min version\n",
     "    #     uparea_fn = 'cmf_uparea_06min',   \n",
@@ -216,7 +217,8 @@
     "    # qmean = da_dis_long.groupby('time.quarter').mean().sel(quarter=int(np.mean(da_dis.time.dt.quarter)))\n",
     "    # qmean = da_dis_long.groupby('time.month').mean().sel(month=int(np.mean(da_dis.time.dt.month)))\n",
     "    # qmean = da_dis_long.mean('time')\n",
-    "    qmean = xr.DataArray(dims='index', data=np.array([155.14355  ,   4.7140665,   3.4636195, 101.25554  ], dtype=np.float32), )\n",
+    "    # print(qmean.values)\n",
+    "    qmean = xr.DataArray(dims='index', data=np.array([161.7727,0.7046502,0.44472486,4.4982467,3.2484558,96.676094,20.92196], dtype=np.float32), )\n",
     "    fact = np.minimum(1,qmean/da_dis.mean())\n",
     "    print(fact.values)\n",
     "    da_disclim = da_dis*fact\n",
@@ -304,11 +306,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "87738ad7185ebd25f8ba4563c6bcdef2bf2a1f4eb16943d55de9ba19ff30811e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('hydromt-dev': conda)",
+   "display_name": "Python 3.9.0 ('compound_hazard')",
    "language": "python",
    "name": "python3"
   },
@@ -324,7 +323,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1fb41f7d3c9d44edbd7f9d2eb0da8e67c67759afdf54e6c06938bd0d90c16cc8"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
