--- a/2_code/3_postprocess/32_postprocess_simulations.ipynb
+++ b/2_code/3_postprocess/32_postprocess_simulations.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "events = {'idai': '20190320', 'eloise':'20210125'}\n",
-    "tslice_max = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}\n",
-    "root0 = r'../../3_models/SFINCS'\n",
+    "events = {'idai': ['20190319', '20190320'], 'eloise':['20210125','20210126']}\n",
+    "tslice_max = {'idai': ('20190313', '20190321'), 'eloise':('20210120', '20210127')}\n",
+    "root0 = r'../../3_models/SFINCS2'\n",
     "mod0 = SfincsModel(join(root0, '00_base_100m'), mode='r')\n",
     "\n",
     "def check_finished(root):\n",
@@ -47,7 +47,7 @@
     "# mod0 = SfincsModel(runs[0], mode='r')\n",
     "# print(runs)\n",
     "\n",
-    "for event, date in events.items():\n",
+    "for event, dates in events.items():\n",
     "    runs = glob.glob(join(root0, '0*', f'{event}*', 'sfincs_map.nc'))\n",
     "    print(event)\n",
     "    da_lst, da_lst1, names = [], [], []\n",
@@ -60,7 +60,7 @@
     "        mod = SfincsModel(root, mode='r')\n",
     "        key = basename(root).strip(f'{event}')\n",
     "        name = f'{basename(dirname(root))}{key}'\n",
-    "        print(name)\n",
+    "        # print(name)\n",
     "        mod.read_results()\n",
     "        hmax = np.maximum(0, mod.results['zsmax'] - mod.results['zb'])\n",
     "        hmax = hmax.fillna(0).where(mod.results['zb'].notnull(),-9999)\n",
@@ -69,17 +69,18 @@
     "        # save geotif\n",
     "        # hmax.raster.flipud().raster.to_raster(join(mod.root, 'gis', 'hmax.tif'), compress='lzw')\n",
     "        # append to list\n",
-    "        da_lst.append(hmax.sel(timemax=date).rename('flddph'))\n",
-    "        da_lst1.append(hmax.sel(timemax=slice(*tslice_max[event])).max('timemax').rename('flddph'))\n",
+    "        da_lst.append(hmax.sel(timemax=slice(*tslice_max[event])).rename({'timemax': 'time'}).rename('flddph'))\n",
+    "        # da_lst.append(hmax.sel(timemax=dates).rename({'timemax': 'time'}).rename('flddph'))\n",
+    "        # da_lst1.append(hmax.sel(timemax=slice(*tslice_max[event])).max('timemax').rename('flddph'))\n",
     "        names.append(name)\n",
     "    # save combined output to nc\n",
     "    da = xr.concat(da_lst, dim='run')\n",
     "    da['run'] = xr.IndexVariable('run', names)\n",
-    "    da.to_netcdf(join(root0, f'flddph_{event}{postfix}.nc'), encoding=encoding)\n",
+    "    da.to_netcdf(join(root0, f'flddph_{event}{postfix}_v2.nc'), encoding=encoding)\n",
     "    # save combined output to nc\n",
-    "    da = xr.concat(da_lst1, dim='run')\n",
-    "    da['run'] = xr.IndexVariable('run', names)\n",
-    "    da.to_netcdf(join(root0, f'flddph_{event}{postfix}_max.nc'), encoding=encoding)\n",
+    "    # da = xr.concat(da_lst1, dim='run')\n",
+    "    # da['run'] = xr.IndexVariable('run', names)\n",
+    "    # da.to_netcdf(join(root0, f'flddph_{event}{postfix}_max_v2.nc'), encoding=encoding)\n",
     "    # break"
    ]
   },
@@ -90,33 +91,46 @@
    "outputs": [],
    "source": [
     "# read and combine CMF outputs\n",
+    "import pandas as pd\n",
     "root = r'../../3_models/CMF'\n",
     "encoding = {'flddph': {'zlib': True}}\n",
     "\n",
-    "for event, date in events.items():\n",
+    "for event, _ in events.items():\n",
     "    da_lst, names = [], []\n",
+    "    dates = pd.date_range(*tslice_max[event], freq='D').strftime('%Y%m%d')\n",
     "    for res in ['03min', '06min']:\n",
-    "        runs = [path for path in glob.glob(join(root, res, '*')) if isdir(path)]\n",
+    "        runs = [path for path in glob.glob(join(root, res, '0*')) if isdir(path)]\n",
     "        for run in runs:\n",
-    "            fn = join(run, f'flddph_{date}.tif')\n",
-    "            if not isfile(fn): continue\n",
-    "            hmax = hydromt.open_raster(fn).raster.reproject_like(mod0.staticmaps)\n",
-    "            da_lst.append(hmax.rename('flddph'))\n",
+    "            da_lst0 = []\n",
+    "            for date in dates:\n",
+    "                fn = join(run, f'flddph_{date}.tif')\n",
+    "                if not isfile(fn): \n",
+    "                    print('missing', fn)\n",
+    "                    continue\n",
+    "                hmax = hydromt.open_raster(fn).raster.reproject_like(mod0.staticmaps)\n",
+    "                da_lst0.append(hmax.rename('flddph'))\n",
+    "            da0 = xr.concat(da_lst0, dim='time')\n",
+    "            da0['time'] = xr.IndexVariable('time', pd.to_datetime(dates))\n",
+    "            da_lst.append(da0)\n",
     "            names.append(f'{basename(run)}_{res}')\n",
     "    # save combined output to nc\n",
     "    print(names)\n",
     "    da = xr.concat(da_lst, dim='run')\n",
     "    da['run'] = xr.IndexVariable('run', names)\n",
-    "    da.to_netcdf(join(root, f'flddph_{event}.nc'), encoding=encoding)"
+    "    da.to_netcdf(join(root, f'flddph_{event}_v2.nc'), encoding=encoding)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc0994946103a4a9202e7a48444db4b9747772261f089f42618eeb067054486d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 64-bit ('hydromt-dev': conda)",
+   "display_name": "Python 3.9.0 ('compound_hazard2')",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +146,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff157b875d130708b62c1a0894fbc6ff6f8e6586fc48c3b625ee942e47421840"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
