--- a/2_code/4_analyze_plot/42_plot_forcing.ipynb
+++ b/2_code/4_analyze_plot/42_plot_forcing.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_root = r'../../3_models/SFINCS'\n",
-    "fdir = r'../../4_results'\n",
+    "model_root = r'../../3_models/SFINCS2'\n",
+    "fdir = r'../../4_results/rebuttal'\n",
     "base_root = join(model_root, \"01_rivpowlaw\")\n",
     "events = {'idai': ('20190314', '20190322'), 'eloise':('20210119', '20210128')}\n",
     "scens = {'h': ['bzs'], 'q': ['dis'], 'p': ['netampr', 'dis', 'bzs']}\n"
@@ -40,6 +40,15 @@
     "        forcing[event][f'{fnames[0]}'] = mod.forcing[fnames[0]].load()\n",
     "        for fname in fnames[1:]:\n",
     "            forcing[f'{event}_base'][f'{fname}'] = mod.forcing[fname].load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_qstat = mod.forcing['dis'].mean('time').argsort().values[-2:]"
    ]
   },
   {
@@ -98,7 +107,7 @@
     "                # print(argmax)\n",
     "\n",
     "            bound = 'H' if longname == 'waterlevel' else 'Q'\n",
-    "            cols = [3] if longname == 'waterlevel' else [0,3]\n",
+    "            cols = [3] if longname == 'waterlevel' else max_qstat\n",
     "            icol0 = 0 if longname == 'waterlevel' else 1\n",
     "\n",
     "\n",
@@ -141,14 +150,18 @@
     "fig.subplots_adjust(wspace=0.05) \n",
     "plt.savefig(join(fdir, f'forcing.png'), dpi=225, bbox_inches=\"tight\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc0994946103a4a9202e7a48444db4b9747772261f089f42618eeb067054486d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('hydromt-dev')",
+   "display_name": "Python 3.9.0 ('compound_hazard2')",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +177,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff157b875d130708b62c1a0894fbc6ff6f8e6586fc48c3b625ee942e47421840"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
