--- a/2_code/4_analyze_plot/45_compound_analysis.ipynb
+++ b/2_code/4_analyze_plot/45_compound_analysis.ipynb
@@ -20,9 +20,10 @@
    "outputs": [],
    "source": [
     "events = {'Idai': '20190320', 'Eloise':'20210125'}\n",
-    "mdir = r'../../3_models/SFINCS'\n",
+    "mdir = r'../../3_models/SFINCS2'\n",
     "\n",
-    "base ='01_rivpowlaw'\n",
+    "base ='02_rivpowlaw_hc0.405'  \n",
+    "# base = '01_rivpowlaw' \n",
     "dep_mask = hydromt.open_raster(join(mdir, base, 'gis', 'dep.tif'))==-9999\n",
     "riv_mask = hydromt.open_raster(join(mdir, base, 'gis', 'rivmsk.tif'))\n",
     "riv_mask.raster.set_nodata(0)\n",
@@ -36,13 +37,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from hydromt_sfincs import SfincsModel\n",
+    "\n",
+    "root = r'../../3_models/SFINCS2/00_base_100m'\n",
+    "mod0 = SfincsModel(root, mode='r')\n",
+    "flwdir =  hydromt.flw.flwdir_from_da(mod0.staticmaps['flwdir'])\n",
+    "xs, ys = flwdir.xy(flwdir.idxs_pit)\n",
+    "\n",
+    "selection = ~np.logical_and(xs>=680000, ys>=7820000)\n",
+    "mod0.set_staticmaps(flwdir.basins(xy=(xs[selection], ys[selection])).astype('int16'), 'basins')\n",
+    "mod0.staticmaps['basins'].raster.set_nodata(0)\n",
+    "da_msk_bas = np.logical_and(mod0.staticmaps['basins'] == 0, mod0.staticmaps['dep']>0)\n",
+    "da_msk_bas = da_msk_bas.astype('int16')\n",
+    "da_msk_bas.raster.set_nodata(0)\n",
+    "gdf_bas = da_msk_bas.raster.vectorize()\n",
+    "# gdf_bas.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hmin=0.15\n",
     "dh = 0.05\n",
-    "# base ='01_rivpowlaw'\n",
     "\n",
     "da_sim, da_diff, da_cmpnd = {}, {}, {}\n",
     "for event in events:\n",
-    "    da = xr.open_dataarray(join(mdir, f'flddph_{event.lower()}_100m_max.nc'))\n",
+    "    da = xr.open_dataarray(join(mdir, f'flddph_{event.lower()}_100m_v2.nc')).max('time')\n",
     "    assert base in da.run.values\n",
     "    # select and rename runs to scenarios\n",
     "    runs = {r:r.replace(f'{base}_', '').replace(base, 'qhp') for r in da.run.values if (r.startswith(base) and 'glofas' not in r)}\n",
@@ -172,6 +195,8 @@
     "    axs[j].set_title('')\n",
     "    axs[i].set_extent(extent, crs=utm)\n",
     "    axs[j].set_extent(extent, crs=utm)\n",
+    "    gdf_bas.plot(ax=axs[i], facecolor='w', edgecolor='k', lw=0.2, zorder=3, hatch='xxx', )\n",
+    "    gdf_bas.plot(ax=axs[j], facecolor='w', edgecolor='k', lw=0.2, zorder=3, hatch='xxx', )\n",
     "\n",
     "    if row == 0:\n",
     "        axs[i].yaxis.set_visible(True)\n",
@@ -201,7 +226,7 @@
     "cbar_ax.set_xticks([0,1])\n",
     "cbar_ax.set_xticklabels(['single', 'compound'], ha='center', rotation=60)\n",
     "\n",
-    "plt.savefig(join('../../4_results', f'{base}_compound_analysis_sfincs.png'), dpi=225, bbox_inches=\"tight\")"
+    "plt.savefig(join('../../4_results/rebuttal', f'{base}_compound_analysis_sfincs.png'), dpi=225, bbox_inches=\"tight\")"
    ]
   },
   {
@@ -213,11 +238,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "dc0994946103a4a9202e7a48444db4b9747772261f089f42618eeb067054486d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.4 ('hydromt-dev')",
+   "display_name": "Python 3.9.0 ('compound_hazard2')",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +255,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ff157b875d130708b62c1a0894fbc6ff6f8e6586fc48c3b625ee942e47421840"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
